--- a/config/db.properties
+++ b/config/db.properties
@@ -1,9 +1,9 @@
 jdbc.driverclass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.226.128:3306/njfu_surveypark_ck
+jdbc.url=jdbc:mysql://localhost:3306/njfu_surveypark_ck
 #jdbc.url=jdbc:mysql://192.168.226.128:3306/surveypark
 #jdbc.url=jdbc:mysql://10.2.21.76:3306/njfu_surveypark_ck?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=root
+jdbc.password=password
 
 c3p0.pool.size.max=10
 c3p0.pool.size.min=2
